# proio

./: .codacy.yml  .codecov.yml  .coveragerc  .gitignore  .landscape.yml  .travis.yml  AUTHORS  CONTRIBUTORS  LICENSE  Makefile  README.md  eicio.proto  format.md  library_guidelines.md  proio.proto
.ci/: build-aux-image.sh  update-superproject.sh
.ci/aux/: Dockerfile
ci/: protoc  update-superproject.sh
code-gen-container/: Dockerfile
code-gen-container/Docker/: Dockerfile
cpp-eicio/: CMakeLists.txt  eicio.pb.cc  eicio.pb.h
cpp-eicio/src/: .clang-format
cpp-eicio/src/eicio/: eicio.pb.cc  eicio.pb.h  event.cc  event.h  reader.cc  reader.h  writer.cc  writer.h
cpp-eicio/src/tests/refderef/: main.cc
cpp-eicio/src/tools/eicio-ls/: main.cc
cpp-eicio/src/tools/eicio-reserialize/: main.cc
cpp-eicio/src/tools/eicio-summary/: main.cc
cpp-eicio/src/tools/eicio2root/: main.cc
cpp-proio/: CMakeLists.txt  README.md
cpp-proio/cmake/: proioConfig.cmake.in
cpp-proio/docs/: Doxyfile  genAndDeploy.sh  mainPage.md
cpp-proio/lib/: libproio.pb.rootmap.in  libproio.rootmap.in
cpp-proio/src/: README.md  event.cc  event.h  reader.cc  reader.h  writer.cc  writer.h
cpp-proio/src/proio/: event.cc  event.h  proio.pb.cc  proio.pb.h  reader.cc  reader.h  writer.cc  writer.h
cpp-proio/src/proio/model/: proio.pb.cc  proio.pb.h
cpp-proio/src/proio/model/lcio/: lcio.pb.cc  lcio.pb.h
cpp-proio/src/proio/model/promc/: promc.pb.cc  promc.pb.h
cpp-proio/src/proio/proto/: proio.pb.cc  proio.pb.h
cpp-proio/src/tests/eicunset/: main.cc
cpp-proio/src/tests/metadata/: main.cc
cpp-proio/src/tests/pushgetinspect/: main.cc
cpp-proio/src/tests/refderef/: main.cc
cpp-proio/src/tests/scan/: main.cc
cpp-proio/src/tests/serialize/: main.cc
cpp-proio/src/tests/tagmanip/: main.cc
cpp-proio/src/tools/proio-ls/: main.cc
cpp-proio/src/tools/proio-reserialize/: main.cc
cpp-proio/src/tools/proio-summary/: main.cc
cpp-proio/src/tools/proio2root/: main.cc
go-eicio/: eicio.pb.go  eicio_test.go  event.go  example_pushGetInspect_test.go  genExtraMsgFuncs.sh  reader.go  writer.go
go-eicio/eicio-ls/: main.go
go-eicio/eicio-strip/: main.go
go-eicio/eicio-summary/: main.go
go-eicio/lcio2eicio/: main.go
go-eicio/model/: eicio.pb.go
go-proio/: README.md  addModelImport.sh  bench_test.go  collection.go  compressionSwitch_test.go  event.go  eventPushGet_test.go  event_test.go  example_print_test.go  example_pushGetInspect_test.go  example_scan_test.go  example_skip_test.go  file_test.go  gen.sh  genExtraMsgFuncs.sh  metadata_test.go  model_imports.go  proio_test.go  reader.go  refDeref_test.go  scan_test.go  strip_test.go  tagging_test.go  writeRead_test.go  writer.go
go-proio/lcio2proio/: main.go
go-proio/model/: proio.pb.go
go-proio/model/eic/: eic.pb.go
go-proio/model/lcio/: lcio.pb.go
go-proio/model/mc/: mc.pb.go
go-proio/model/promc/: promc.pb.go
go-proio/proio-ls/: main.go
go-proio/proio-strip/: main.go
go-proio/proio-summary/: main.go
go-proio/proto/: proio.pb.go
java-eicio/: README.md  pom.xml
java-eicio/src/main/java/eicio/: Event.java  List.java  Ls.java  Model.java  Reader.java  Writer.java
java-eicio/src/test/java/eicio/: AppTest.java
java-proio/: README.md  gen.sh  pom.xml
java-proio/src/main/java/proio/: Event.java  Ls.java  Model.java  Proto.java  Reader.java  Writer.java
java-proio/src/main/java/proio/model/: Eic.java  Lcio.java  Mc.java  Promc.java
java-proio/src/test/java/proio/: AppTest.java
model/: eic.proto  lcio.proto  mc.proto  proio.proto  promc.proto
model/eic/: eic.proto
model/example/: example.proto
model/lcio/: lcio.proto
model/mc/: mc.proto
model/promc/: promc.proto
proto/: proio.proto
py-eicio/: setup.py
py-eicio/eicio/: __init__.py  eicio_pb2.py  event.py  reader.py  writer.py
py-eicio/eicio/model/: __init__.py  eicio_pb2.py
py-proio/: .gitignore  README.md  gen.sh  setup.py
py-proio/docs/: Makefile  conf.py  genAndDeploy.sh  index.rst  make.bat
py-proio/proio/: __init__.py  event.py  proio_pb2.py  reader.py  writer.py
py-proio/proio/model/: __init__.py  proio_pb2.py  promc.py
py-proio/proio/model/eic/: __init__.py  eic_pb2.py
py-proio/proio/model/lcio/: __init__.py  lcio_pb2.py
py-proio/proio/model/mc/: __init__.py  mc_pb2.py
py-proio/proio/model/promc/: __init__.py  promc_pb2.py
py-proio/proio/proto/: __init__.py  proio_pb2.py
py-proio/tests/: test_files.py  test_metadata.py  test_push_get.py  test_ref_deref.py  test_refderef.py  test_tags.py
samples/: .gitignore  muons-gzip.proio  muons-lz4.proio  muons-uncomp.proio  smallSample.eicio  smallSample.proio  smallSample.proio.lz4
